# clawdia_sdk

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  coding_standards.md
crates/agent-sdk-core/: Cargo.toml  README.md
crates/agent-sdk-core/src/: README.md  lib.rs
crates/agent-sdk-core/src/application/: agent.rs  agent_pool.rs  anti_entropy.rs  approval.rs  checkpoint.rs  extension.rs  hooks.rs  isolation.rs  kernel.rs  loop_driver.rs  loop_state.rs  output_delivery.rs  projection.rs  realtime.rs  recovery.rs  repair.rs  replay.rs  run.rs  run_handle.rs  runtime.rs  stream.rs  subagent.rs  telemetry.rs  tool.rs  trace.rs  validation.rs
crates/agent-sdk-core/src/domain/: error.rs  ids.rs  json.rs  mod.rs  policy.rs  privacy.rs  refs.rs
crates/agent-sdk-core/src/package/: capability.rs  extension.rs  hooks.rs  isolation.rs  mod.rs  realtime.rs  stream.rs  subagent.rs  tool_pack.rs
crates/agent-sdk-core/src/ports/: approval.rs  content.rs  event_bus.rs  extension.rs  hooks.rs  isolation.rs  journal.rs  mod.rs  output_delivery.rs  provider.rs  providers.rs  realtime.rs  subscription.rs  telemetry.rs  tool.rs  tool_pack.rs  typed_output.rs
crates/agent-sdk-core/src/records/: approval.rs  content.rs  context.rs  effect.rs  event.rs  events.rs  extension.rs  hooks.rs  isolation.rs  journal.rs  output.rs  output_delivery.rs  realtime.rs  stream.rs  structured_output.rs  subagent.rs  telemetry.rs  tool.rs  tool_pack.rs  validated_output.rs
crates/agent-sdk-core/src/testing/: approval.rs  content.rs  event.rs  extension.rs  fakes.rs  hooks.rs  isolation.rs  mod.rs  output_delivery.rs  realtime.rs  telemetry.rs  tool.rs
crates/agent-sdk-core/tests/: README.md  agent_pool_contract.rs  approval_contract.rs  context_contract.rs  contract_golden.rs  event_contract.rs  extension_contract.rs  fake_fixture_harness.rs  hook_lifecycle_contract.rs  id_ref_contract.rs  isolation_contract.rs  journal_contract.rs  loop_state_contract.rs  output_contract.rs  output_delivery_contract.rs  p0_text_run.rs  p1_typed_output.rs  package_import_smoke.rs  policy_contract.rs  policy_matrix.rs  privacy_performance.rs  provider_projection_contract.rs  public_api.rs  replay_recovery.rs  run_handle_contract.rs  runtime_contract.rs  runtime_package_contract.rs  stream_realtime_contract.rs  subagent_contract.rs  telemetry_core_contract.rs  tool_execution_contract.rs  tool_pack_boundary.rs  validated_output_contract.rs  validation_repair.rs
crates/agent-sdk-core/tests/domain/: id_ref_contract.rs  policy_contract.rs  policy_matrix.rs  public_api.rs
crates/agent-sdk-core/tests/feature_layers/: agent_pool_contract.rs  approval_contract.rs  extension_contract.rs  hook_lifecycle_contract.rs  isolation_contract.rs  output_contract.rs  output_delivery_contract.rs  p1_typed_output.rs  stream_realtime_contract.rs  subagent_contract.rs  telemetry_core_contract.rs  tool_execution_contract.rs  tool_pack_boundary.rs  validated_output_contract.rs  validation_repair.rs
crates/agent-sdk-core/tests/fixtures/: README.md
crates/agent-sdk-core/tests/golden/: contract_golden.rs
crates/agent-sdk-core/tests/p0/: p0_text_run.rs
crates/agent-sdk-core/tests/package/: runtime_package_contract.rs
crates/agent-sdk-core/tests/ports/: provider_projection_contract.rs
crates/agent-sdk-core/tests/privacy_performance/: mod.rs
crates/agent-sdk-core/tests/records/: context_contract.rs  event_contract.rs  journal_contract.rs
crates/agent-sdk-core/tests/replay_recovery/: mod.rs
crates/agent-sdk-core/tests/runtime/: loop_state_contract.rs  package_import_smoke.rs  run_handle_contract.rs  runtime_contract.rs
crates/agent-sdk-core/tests/scenarios/: mod.rs
crates/agent-sdk-core/tests/testing/: fake_fixture_harness.rs
crates/agent-sdk-eval/: Cargo.toml  README.md
crates/agent-sdk-eval/src/: comparison.rs  cost.rs  evaluator.rs  evidence.rs  identity.rs  lib.rs  metrics.rs  report.rs  request.rs  run_report.rs  scope.rs  testing.rs  usage.rs
crates/agent-sdk-eval/tests/: eval_contract.rs
crates/agent-sdk-macros/: Cargo.toml  README.md
crates/agent-sdk-macros/src/: lib.rs
crates/agent-sdk-macros/tests/: macro_contract.rs  trybuild.rs
crates/agent-sdk-macros/tests/ui/: agent_tool_missing_version.rs  (+1 more)
crates/agent-sdk-provider/: Cargo.toml  README.md
crates/agent-sdk-provider/src/: anthropic.rs  arguments.rs  auth.rs  error.rs  gemini.rs  http.rs  lib.rs  openai.rs  openai_compatible.rs
crates/agent-sdk-provider/tests/: live_adapters.rs  openai_compatible.rs  provider_tool_projection.rs
crates/agent-sdk-store-file/: Cargo.toml  README.md
crates/agent-sdk-store-file/src/: agent_pool.rs  bundle.rs  checkpoint.rs  content.rs  event_archive.rs  journal.rs  lib.rs  provider_arguments.rs  tool_execution.rs  util.rs
crates/agent-sdk-store-file/tests/: file_store_contract.rs
crates/agent-sdk-store-postgres/: Cargo.toml  README.md
crates/agent-sdk-store-postgres/src/: agent_pool.rs  bundle.rs  checkpoint.rs  client.rs  content.rs  event_archive.rs  journal.rs  lib.rs  provider_arguments.rs  tool_execution.rs  util.rs
crates/agent-sdk-store-postgres/tests/: postgres_store_contract.rs
crates/agent-sdk-store-sqlite/: Cargo.toml  README.md
crates/agent-sdk-store-sqlite/src/: agent_pool.rs  bundle.rs  checkpoint.rs  content.rs  event_archive.rs  journal.rs  lib.rs  provider_arguments.rs  tool_execution.rs  util.rs
crates/agent-sdk-store-sqlite/tests/: sqlite_store_contract.rs
crates/agent-sdk-toolkit/: Cargo.toml  README.md
crates/agent-sdk-toolkit/src/: evaluation.rs  lib.rs  typed_tool.rs
crates/agent-sdk-toolkit/tests/: adapter_conformance.rs  agent_pool_store.rs  environment_profiles.rs  evaluation.rs  toolkit_packs.rs  typed_tool.rs
crates/clawdia-sdk/: Cargo.toml  README.md
crates/clawdia-sdk/src/: app.rs  lib.rs
crates/clawdia-sdk/tests/: public_api.rs
examples/01_facade_complex_agent/: Cargo.toml  README.md
examples/01_facade_complex_agent/src/: main.rs
examples/08_checkpoint_replay/: Cargo.toml  README.md
examples/08_checkpoint_replay/src/: main.rs
(+499 files in other folders)
