[workspace]
members = [
    "crates/agent-sdk-core",
    "crates/agent-sdk-eval",
    "crates/agent-sdk-provider",
    "crates/agent-sdk-toolkit",
    "crates/clawdia-sdk",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/heyclawdia/clawdia_sdk"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
