[workspace]
members = [
    "crates/agent-sdk-core",
    "crates/agent-sdk-eval",
    "crates/agent-sdk-macros",
    "crates/agent-sdk-provider",
    "crates/agent-sdk-store-file",
    "crates/agent-sdk-store-supabase",
    "crates/agent-sdk-toolkit",
    "crates/clawdia-sdk",
    "examples/01_facade_complex_agent",
    "examples/02_typed_tool_macro",
    "examples/03_file_store",
    "examples/04_supabase_scripted_store",
    "examples/05_reporting_and_eval",
    "examples/06_typed_output_and_events",
    "examples/07_approval_denial",
    "examples/08_checkpoint_replay",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/heyclawdia/clawdia_sdk"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
