[package]
name = "agent-sdk-core"
version = "0.1.0-alpha.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Product-neutral primitive kernel and contracts for a Rust-first Agent SDK."
documentation = "https://docs.rs/agent-sdk-core"
readme = "README.md"

[features]
default = []
test-support = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
