[package]
name = "agent-sdk-macros"
version = "0.1.0-alpha.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional proc macros for typed Agent SDK toolkit helpers."
documentation = "https://docs.rs/agent-sdk-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
agent-sdk-core = { path = "../agent-sdk-core", version = "=0.1.0-alpha.3" }
agent-sdk-toolkit = { path = "../agent-sdk-toolkit", version = "=0.1.0-alpha.3" }
serde.workspace = true
serde_json.workspace = true
trybuild = "1"
