[package]
name = "agent-sdk-store-file"
version = "0.1.0-alpha.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Filesystem-backed durable store adapters for the Agent SDK."
documentation = "https://docs.rs/agent-sdk-store-file"
readme = "README.md"

[dependencies]
agent-sdk-core = { path = "../agent-sdk-core", version = "=0.1.0-alpha.3" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
