[package]
name = "agent-sdk-store-postgres"
version = "0.1.0-alpha.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scripted Postgres-style durable store adapters for the Agent SDK."
documentation = "https://docs.rs/agent-sdk-store-postgres"
readme = "README.md"

[dependencies]
agent-sdk-core = { path = "../agent-sdk-core", version = "=0.1.0-alpha.4" }
base64 = "0.22.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
