[package]
name = "agent-sdk-store-sqlite"
version = "0.1.0-alpha.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite-backed durable store adapters for the Agent SDK."
documentation = "https://docs.rs/agent-sdk-store-sqlite"
readme = "README.md"

[dependencies]
agent-sdk-core = { path = "../agent-sdk-core", version = "=0.1.0-alpha.4" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
