[package]
name = "clawdia-sdk"
version = "0.1.0-alpha.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Convenience facade over the split Rust-first Agent SDK crates."
documentation = "https://docs.rs/clawdia-sdk"
readme = "README.md"
publish = false

[features]
default = []
providers = ["dep:agent-sdk-provider"]
workspace-tools = ["dep:agent-sdk-toolkit"]
evals = ["dep:agent-sdk-eval"]
reports = ["evals"]
macros = ["dep:agent-sdk-macros", "workspace-tools"]
file-store = ["dep:agent-sdk-store-file"]
supabase-store = ["dep:agent-sdk-store-supabase"]
stores = ["file-store", "supabase-store"]
test-support = ["agent-sdk-core/test-support"]
all-stable = [
    "providers",
    "workspace-tools",
    "evals",
    "macros",
    "file-store",
    "supabase-store",
]

[dependencies]
agent-sdk-core = { path = "../agent-sdk-core", version = "=0.1.0-alpha.3", default-features = false }
agent-sdk-eval = { path = "../agent-sdk-eval", version = "=0.1.0-alpha.3", optional = true, default-features = false }
agent-sdk-macros = { path = "../agent-sdk-macros", version = "=0.1.0-alpha.3", optional = true }
agent-sdk-provider = { path = "../agent-sdk-provider", version = "=0.1.0-alpha.3", optional = true, default-features = false }
agent-sdk-store-file = { path = "../agent-sdk-store-file", version = "=0.1.0-alpha.3", optional = true, default-features = false }
agent-sdk-store-supabase = { path = "../agent-sdk-store-supabase", version = "=0.1.0-alpha.3", optional = true, default-features = false }
agent-sdk-toolkit = { path = "../agent-sdk-toolkit", version = "=0.1.0-alpha.3", optional = true, default-features = false }

[dev-dependencies]
serde.workspace = true
