[package]
name = "clawdia-sdk-example-01-facade-complex-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clawdia-sdk = { path = "../../crates/clawdia-sdk", features = ["evals", "file-store", "test-support", "workspace-tools"] }
serde = { workspace = true, features = ["derive"] }
