[package]
name = "clawdia-sdk-example-08-checkpoint-replay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clawdia-sdk = { path = "../../crates/clawdia-sdk", features = ["file-store", "test-support"] }
